位置小調整

--- a/練習.html
+++ b/練習.html
@@ -71,30 +71,30 @@
 
       .container .col:nth-child(2) {
         position: absolute;
-        right: 65%;
+        right: 70%;
       }
 
       .container .col:nth-child(2)::before {
         content: '———————';
         position: absolute;
-        top: 80%;
-        left: 85%;
-        transform: rotate(35deg);
+        top: 70%;
+        left: 90%;
+        transform: rotate(25deg);
         color: rgb(212, 211, 211);
       }
 
       .container .col:nth-child(3) {
         position: absolute;
         top: 10%;
-        right: 80%;
+        right: 85%;
       }
 
       .container .col:nth-child(3)::before {
-        content: '——————————————————';
+        content: '—————————————————';
         position: absolute;
         top: 75%;
         left: 100%;
-        transform: rotate(14deg);
+        transform: rotate(10deg);
         color: rgb(212, 211, 211);
       }
 
@@ -105,7 +105,7 @@
       }
 
       .container .col:nth-child(4)::before {
-        content: '—————————————';
+        content: '—————————';
         position: absolute;
         top: 35%;
         left: 100%;
@@ -130,15 +130,15 @@
 
       .container .col:nth-child(6) {
         position: absolute;
-        left: 65%;
+        left: 70%;
       }
 
       .container .col:nth-child(6)::before {
         content: '———————';
         position: absolute;
-        top: 90%;
+        top: 80%;
         right: 90%;
-        transform: rotate(-34deg);
+        transform: rotate(-25deg);
         color: rgb(212, 211, 211);
       }
 
@@ -149,10 +149,10 @@
       }
 
       .container .col:nth-child(7)::before {
-        content: '———————————';
+        content: '—————————';
         position: absolute;
         top: 50%;
-        right: 115%;
+        right: 110%;
         transform: rotate(0deg);
         color: rgb(212, 211, 211);
       }
@@ -160,14 +160,14 @@
       .container .col:nth-child(8) {
         position: absolute;
         bottom: 10%;
-        left: 65%;
+        left: 70%;
       }
 
       .container .col:nth-child(8)::before {
-        content: '————————';
+        content: '———————';
         position: absolute;
         bottom: 80%;
-        right: 100%;
+        right: 105%;
         transform: rotate(20deg);
         color: rgb(212, 211, 211);
       }
